@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.17.22
+VERSION=1.17.23
 DEPENDENCY="zeda=1.10.2;zm=1.10.1"
